unshuffle/apps/ui/static/base.less
@card-width: 10em;
@card-height: 5em;
@card-padding: 1em;

@bg: #222;
@lbg: #555;
@text: #eee;

@card: #fff;
@card-text: #000;
@card-highlight: #bbf;

body {
  background-color: @bg;
  background-image: url("noise.png");
  color: @text;
  font-family: "Helvetica", sans-serif;
  font-size: 1.2rem;
  padding: 0;
  margin: 0;
}

.lock-width {
  max-width: 50em;
  margin: 0 auto;
  padding: 0 1em;
}

h1, h2 {
  text-align: center;
}

h1 {
  font-size: 1.3em;
  margin: 1em 0 0;
}

h2 {
  font-size: 1.2em;
  margin: 2em 0 0.5em;
  padding: 0 1em;
}

.river, .hand {
  display: block;
  box-shadow: 0 0 1em black;
  background-color: @lbg;
  background-image: url("noise.png");
  position: relative;
  text-align: center;
  padding: 0 10vw;
  overflow-x: scroll;
  -webkit-overflow-scrolling: touch;
  white-space: nowrap;
  margin: .5em 0 -0.5em;

  .choice-group {
    display: inline;
  }
}

.card-spacing {
  vertical-align: top;
  display: inline-block;
  position: relative;
  top: 1em;
  width: @card-width;
  height: @card-height;
  padding: @card-padding;
  margin: .5em .5em 2.5em;
}

.card {
  text-align: left;
  .card-spacing;
  box-shadow: 0 .2em .5em rgba(0, 0, 0, 0.3);
  background-color: @card;
  background-image: url("noise.png");
  color: @card-text;
  border-radius: @card-padding;
  transition: top 0.2s, background-color 0.2s;

  h3 {
    margin: 0;
  }

  p {
    margin: 0;
  }
}

.hand {
  input[type="radio"] {
    display: none;

    ~ label .card:hover, ~ label .card:focus {
      top: 1.25em;
      background-color: average(@card-highlight, @card);
    }

    &:checked ~ label .card {
      top: 1.5em;
      background-color: @card-highlight;
    }
  }
}

.river {
  input[type="radio"] {
    display: none;

    ~ label {
      .card-spacing;
      border-radius: @card-padding;
      right: @card-width/2 + 1.5em;
      top: 1em;
      margin-right: -(@card-width + 2.7em);
      z-index: 1;
      transition: top 0.2s, opacity 0.2s;
      opacity: 0;
      background-color: desaturate(@card-highlight, 50%);

      &:focus, &:hover {
        opacity: 0.5;
        top: 0.25em;
      }
    }

    &:checked ~ label {
      background-color: @card-highlight;
      top: 0.5em;
      opacity: 0.5;
    }
  }
}

#play-button {
  font-size: 1.5em;
  padding: .5em 2em;
  border: none;
  border-radius: .5em;
  background-color: @card-highlight;
  color: @card-text;
  display: block;
  margin: 2em auto;
  -webkit-appearance: none;
}

